# nlcglib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.rst
cmake/: cudalibs_target.cmake  nlcglib-config.cmake.in  nlcglib_macros.cmake  rocmlibs_target.cmake
cmake/modules/: FindMAGMA.cmake  FindMKL.cmake  FindSCI.cmake
include/: interface.hpp  nlcglib.hpp
spack-envs/q-e-sirius-cpu-only/: spack.yaml
spack-envs/q-e-sirius-cuda/: spack.yaml
spack-envs/q-e-sirius-lumi/: spack.yaml
src/: CMakeLists.txt  constants.hpp  csingleton.hpp  descent_direction.hpp  exceptions.hpp  exec_space.hpp  free_energy.hpp  geodesic.hpp  logger.hpp  mvp2.hpp  nlcglib.cpp  operator.hpp  overlap.hpp  preconditioner.hpp  smearing.hpp  traits.hpp  ultrasoft_precond.hpp
src/dft/: newton_minimization_smearing.hpp
src/gpu/: acc.cpp  acc.hpp
src/helper/: funcs.hpp
src/hip/: hip_space.hpp
src/la/: backtrace.hpp  cblas.hpp  cublas.hpp  cuda.hpp  cusolver.cpp  cusolver.hpp  dvector.hpp  lapack.hpp  lapack_cpu.hpp  lapack_cuda.hpp  lapack_rocm.hpp  layout.hpp  magma.cpp  magma.hpp  map.hpp  mvector.hpp  rocblas.hpp  rocm.hpp  rocsolver.hpp  utils.hpp
src/linesearch/: linesearch.hpp
src/mpi/: communicator.hpp  mpi_type.hpp
src/mvp2/: descent_direction.hpp  descent_direction_impl.hpp  mvp2.hpp
src/pseudo_hamiltonian/: grad_eta.hpp
src/utils/: env.hpp  format.hpp  logger.hpp  step_logger.hpp  timer.hpp
test/: CMakeLists.txt  test.cpp  test3.cpp  test_buffer.cpp  test_custom_kernels.cpp  test_deep_copy.cpp  test_dvector_mirror_view_and_copy.cpp  test_gpu.cpp  test_kokkos.cpp  test_lambda_device.cpp  test_mpi_wrapper.cpp  test_mvector_cuda.cpp  test_nvcc.cpp  test_smearing.cpp  test_solver.cpp  test_stride_dvector.cpp  test_threaded.cpp  test_traits.cpp  test_utils.cpp  test_view.cpp
unit_tests/: CMakeLists.txt
unit_tests/local/: test_la_wrappers.cpp  test_solver_wrappers.cpp
